crates/compiler/tests/snapshots/compiler_test__compile_declarations__remaps_custom_tsconfig_paths.snap
---
source: crates/compiler/tests/compiler_test.rs
expression: "read_file(sandbox.path().join(\".espm\").join(\"tsconfig.es2022.json\"))"
---
{
  "compilerOptions": {
    "baseUrl": "../src",
    "declaration": true,
    "emitDeclarationOnly": true,
    "module": "es2022",
    "moduleResolution": "node",
    "outDir": "./es2022",
    "paths": {
      "~": [
        "../src/index.ts",
        ".././src/*"
      ]
    },
    "rootDir": "../src",
    "rootDirs": [
      "../.",
      "../../types"
    ],
    "target": "es2022"
  },
  "exclude": [
    "../src/*.test.*",
    "../tests/**/*"
  ],
  "extends": [
    "../../../tsconfig.options.json",
    "npm-package/tsconfig.json"
  ],
  "include": [
    "../src/**/*"
  ],
  "references": [
    {
      "path": "../../../common"
    }
  ]
}
